--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -31,6 +31,7 @@
 * Czech: {{t-|cs|Spojené státy americké}}, {{t-|cs|Spojené státy}}
 * Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}
 * Dutch: {{t+|nl|Verenigde Staten van Amerika|f|p}}, {{t+|nl|Verenigde Staten}}, {{t-|nl|VS}}
+* [[Eastern Keres]]: {{tø|kee|'Amelika-hui-pu-'ia}}
 * Esperanto: {{t+|eo|Usono|xs=Esperanto}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko|xs=Esperanto}}
 * Estonian: {{t+|et|Ameerika Ühendriigid}}
 * Filipino: {{t-|tl|Estados Unidos ng Amerika|xs=Tagalog}}
