--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -52,9 +52,9 @@
 * Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Ameriká Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation'')
 * Kazakh: [[Америка Құрама Штаттары]]
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
+{{trans-mid}}
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 * [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
-{{trans-mid}}
 * Lao: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
 * Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
@@ -84,7 +84,7 @@
 * Spanish: {{t+|es|Estados Unidos de América|m|s}}, (''short form'') {{t+|es|Estados Unidos|m|s}}, ''abbr:'' {{t-|es|EE. UU.|m|s}}, {{t-|es|EEUU}}
 * Swedish: {{t|sv|Amerikas förenade stater}}, {{t|sv|Förenta staterna}}
 * [[Tajik]]: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
-* Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa)
+* Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa),  {{t|th|อเมริกา|tr=àmayrígaa|sc=Thai}},  {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa|sc=Thai}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t+|tr|ABD}}
 * Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolučeni Štáti Amériki|xs=Ukrainian}}, {{t+|uk|США|xs=Ukrainian}}
 * [[Uyghur]]: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
