--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -52,6 +52,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Italian: {{t+|it|ramo}}
 * Kurdish: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
 {{trans-mid}}
+* Latin: {{t|la|ramus}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|гранка|n|tr=grànka}}
 * Polish: {{t+|pl|gałąź|f}}
