--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -5,7 +5,7 @@
 {{rank|old|came|men|107|come|without|make|def}}
 
 ===Etymology===
-{{etyl|ang}} {{term|cuman|lang=ang}} from {{proto|Indo-European|gʷem-|lang=ang}}. Cognates include Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}, Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, Latin {{term|venio|veniō|lang=la}}, German {{term|kommen|lang=de}}, Swedish {{term|komma|lang=sv}}.
+{{etyl|ang}} {{term|cuman|lang=ang}} from {{proto|Indo-European|gʷem-}}. Cognates include Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}, Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, Latin {{term|venio|veniō|lang=la}}, German {{term|kommen|lang=de}}, Swedish {{term|komma|lang=sv}}.
 
 ===Pronunciation===
 * {{enPR|kŭm}}, {{IPA|/kʌm/}}, {{SAMPA|/kVm/}}
