--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -8,7 +8,7 @@
 
 ===Etymology===
 
-{{etyl|ang}} {{term||flotian|to float}}, from {{proto|Germanic|flutojanan||lang=ang}}. Compare Old Norse {{term|flota}}, Icelandic {{term|fljóta}} and Mittle Dutch {{term|vloten}}.
+{{etyl|ang}} {{term||flotian|to float}}, from {{proto|Germanic|flutojanan|}}. Compare Old Norse {{term|flota}}, Icelandic {{term|fljóta}} and Mittle Dutch {{term|vloten}}.
 
 ===Noun===
 {{en-noun}}
