--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -98,6 +98,7 @@
 * Romanian: {{t|ro|trage}}
 * [[Romansch]]: {{t-|rm|trair|xs=Romansch}}
 * Russian: {{t|ru|тянуть|tr=tjanút’}} {{impf}}, {{t|ru|потянуть|tr=potjanút’}} {{pf}}, {{t|ru|тащить|tr=taščít’}} {{impf}}, {{t|ru|потащить|tr=potaščít’}} {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|slaod}},  {{t|gd|tarraing}}
 * Spanish: {{t+|es|tirar}}
 * Swahili: [[kuvuta]]
 * Swedish: {{t+|sv|dra}}, {{t+|sv|draga}}
@@ -131,6 +132,7 @@
 {{trans-mid}}
 * German: {{t+|de|ziehen}}
 * Italian: {{t+|it|tirare}}
+* [[Scottish Gaelic]]: {{t|gd|slaod}},  {{t|gd|tarraing}}
 * Spanish: {{t+|es|halar}}, {{t+|es|jalar}}
 * Swedish: {{t+|sv|dra}}
 {{trans-bottom}}
