--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -28,6 +28,7 @@ In the English language, it is one of only a few distinct words where the gender
 {{trans-mid}}
 * French: {{t+|fr|blonde|f}}
 * Polish: [[blondyn]] {{m}}, [[blondynka]] {{f}}
+* Turkish: {{t|tr|sarışın}}
 {{trans-bottom}}
 
 {{trans-top|a hair color}}
