--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -46,7 +46,7 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 * French: [[par ex.]], [[p. ex.]] {{i|[[par exemple]]}}<!-- are both right? -->
 * German: [[z. B.]] {{i|[[zum Beispiel]]}}
 * Greek: [[π.χ.]] {{i|[[παραδείγματος χάριν]]}}
-* Hebrew: {{t|he|לדוגמה|tr=ledugma}}
+* Hebrew: {{t|he|לדוגמה|tr=l'dugmá}}, {{t|he|למשל|tr=l'mashál}}
 * Hungarian: [[pl.]] {{i|[[például]]}}
 * Icelandic: [[t.d.]] {{i|[[til dæmis]]}}
 * Italian: [[ad es.]] {{i|[[ad esempio]]}}
