--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -60,7 +60,7 @@
 
 ====Translations====
 {{trans-top|transitive: apply a force to (an object) so that it moves away}}
-* Arabic: {{Arab|[[دفع]]}} (dáfaʕa)
+* Arabic: {{Arab|[[دفع]]}} (dáfaʕa),  {{t|ar|دفع|tr=dáfa3a|sc=Arab}}
 * Armenian: {{t-|hy|հրել|tr=hrel}}
 * [[Catalan]]: {{t|ca|empènyer}}
 * Chinese: [[推]] (tuī)
@@ -70,20 +70,23 @@
 * French: {{t+|fr|pousser}}
 * [[Galician]]: {{t+|gl|empurrar|xs=Galician}},  {{t|gl|empuxar|xs=Galician}}
 * German: {{t+|de|drücken}}, {{t+|de|schieben}}, {{t+|de|stoßen}}
+* Hindi: {{t|hi|धकेलना|tr=dhakelanā|sc=Deva}}
 * Hungarian: {{t+|hu|tol}}, {{t|hu|megtol}}, {{t+|hu|lök}}
 * [[Ido]]: [[pulsar]]
 * Italian: {{t+|it|spingere}}
-* Japanese: [[押す]] (おす, osu)
-* Korean: [[밀다]] (milda)
+* Japanese: [[押す]] (おす, osu),  {{t|ja|押す|tr=おす, osu|sc=Jpan}}
+* Korean: [[밀다]] (milda),  {{t|ko|밀다|tr=milda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[پاڵ دان]]}}
 {{trans-mid}}
 * Latin: {{t-|la|pello}}
+* Mandarin: {{t|zh|推|tr=tuī|sc=Hani}}
 * Norwegian: [[dytte]], [[skubbe]]
 * Old English: {{t-|ang|scufan|alt=scūfan|xs=Old English}}
+* Persian: {{t|fa|هل دادن|tr=hol dādan|sc=fa-Arab}}
 * Polish: [[pchnąć]], [[popchnąć]]
 * Portuguese: {{t+|pt|empurrar}}
 * Romanian: {{t+|ro|împinge}}, {{t+|ro|apăsa}}
-* Russian: {{t+|ru|толкать|tr=tolkát’}}
+* Russian: {{t+|ru|толкать|tr=tolkát’}},  {{t|ru|толкнуть|tr=tolknút'|sc=Cyrl}}
 * [[Samoan]]: {{t|sm|smatgar|xs=Samoan}}
 * [[Scottish Gaelic]]: {{t-|gd|stob|xs=Scottish Gaelic}}
 * Slovene: [[potiskati]]
@@ -91,6 +94,8 @@
 * Swahili: [[kusukuma]]
 * Swedish: [[skjuta på]]
 * [[Telugu]]: [[నెట్టు]] (neTTu), [[తోయు]] (tOyu)
+* Thai: {{t|th|ดัน|tr=dan|sc=Thai}},  {{t|th|กด|tr=gòt|sc=Thai}}
+* Vietnamese: {{t|vi|xô}},  {{t|vi|đẩy}}
 * [[West Frisian]]: {{t-|fy|triuwe|xs=West Frisian}}
 {{trans-bottom}}
 
