--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -60,10 +60,11 @@
 
 ====Translations====
 {{trans-top|transitive: apply a force to (an object) so that it moves away}}
-* Arabic: {{Arab|[[دفع]]}} (dáfaʕa),  {{t|ar|دفع|tr=dáfa3a|sc=Arab}}
+* Arabic: {{t|ar|دفع|tr=dáfa3a|sc=Arab}}
 * Armenian: {{t-|hy|հրել|tr=hrel}}
 * [[Catalan]]: {{t|ca|empènyer}}
-* Chinese: [[推]] (tuī)
+* Chinese:
+*: Mandarin: {{t|zh|推|tr=tuī|sc=Hani}}
 * Czech: {{t-|cs|tlačit}}
 * Dutch: {{t+|nl|duwen}}
 * Finnish: {{t+|fi|työntää}}
@@ -74,19 +75,18 @@
 * Hungarian: {{t+|hu|tol}}, {{t|hu|megtol}}, {{t+|hu|lök}}
 * [[Ido]]: [[pulsar]]
 * Italian: {{t+|it|spingere}}
-* Japanese: [[押す]] (おす, osu),  {{t|ja|押す|tr=おす, osu|sc=Jpan}}
-* Korean: [[밀다]] (milda),  {{t|ko|밀다|tr=milda|sc=Kore}}
+* Japanese: {{t|ja|押す|tr=おす, osu|sc=Jpan}}
+* Korean:  {{t|ko|밀다|tr=milda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[پاڵ دان]]}}
 {{trans-mid}}
 * Latin: {{t-|la|pello}}
-* Mandarin: {{t|zh|推|tr=tuī|sc=Hani}}
 * Norwegian: [[dytte]], [[skubbe]]
 * Old English: {{t-|ang|scufan|alt=scūfan|xs=Old English}}
 * Persian: {{t|fa|هل دادن|tr=hol dādan|sc=fa-Arab}}
 * Polish: [[pchnąć]], [[popchnąć]]
 * Portuguese: {{t+|pt|empurrar}}
 * Romanian: {{t+|ro|împinge}}, {{t+|ro|apăsa}}
-* Russian: {{t+|ru|толкать|tr=tolkát’}},  {{t|ru|толкнуть|tr=tolknút'|sc=Cyrl}}
+* Russian: {{t+|ru|толкать|tr=tolkát’}} {{impf}},  {{t|ru|толкнуть|tr=tolknút’|sc=Cyrl}} {{pf}}
 * [[Samoan]]: {{t|sm|smatgar|xs=Samoan}}
 * [[Scottish Gaelic]]: {{t-|gd|stob|xs=Scottish Gaelic}}
 * Slovene: [[potiskati]]
