--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -95,6 +95,7 @@
 * Swedish: [[skjuta på]]
 * [[Telugu]]: [[నెట్టు]] (neTTu), [[తోయు]] (tOyu)
 * Thai: {{t|th|ดัน|tr=dan|sc=Thai}},  {{t|th|กด|tr=gòt|sc=Thai}}
+* Urdu: {{t|ur|دھکیلنا|tr=dhakelanā|sc=ur-Arab}}
 * Vietnamese: {{t|vi|xô}},  {{t|vi|đẩy}}
 * [[West Frisian]]: {{t-|fy|triuwe|xs=West Frisian}}
 {{trans-bottom}}
