--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -43,7 +43,6 @@ Compare Italian {{term|cosa|lang=it}}, Portuguese {{term|coisa|lang=pt}}, Spanis
 * {{alphagram|cehos}}
 * [[échos#French|échos]]
 
-
 [[cs:chose]]
 [[de:chose]]
 [[et:chose]]
@@ -57,6 +56,7 @@ Compare Italian {{term|cosa|lang=it}}, Portuguese {{term|coisa|lang=pt}}, Spanis
 [[ku:chose]]
 [[lt:chose]]
 [[hu:chose]]
+[[ja:chose]]
 [[ru:chose]]
 [[simple:chose]]
 [[fi:chose]]
