--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -7,7 +7,7 @@
 From {{etyl|ang}} {{term|butere|lang=ang}}, from West Germanic, from Latin {{term|butyrum|būtȳrum|lang=la}}, from {{etyl|grc}} {{term|sc=polytonic|βούτυρον|tr=boútȳron||cow cheese|lang=grc}}, from {{term|sc=polytonic|βοῦς|tr=boûs|lang=grc||ox, cow}} and {{term|sc=polytonic|τυρός|tr=turós||cheese|lang=grc}}, from Scythian (cf. Avestan {{rfscript|Avestan}} ''tūiri'', 'curdled milk, whey'). Akin to Dutch {{term|boter|lang=nl}} and German {{term|Butter|lang=de}}.
 
 ===Pronunciation===
-* {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌtər/}}, {{SAMPA|/"bVt@r/}}
+* {{enPR|bŭtʹ-ər}}, {{IPA|/ˈbʌtəɹ/}}, {{SAMPA|/"bVt@r\/}}
 ** {{a|UK}} {{IPA|[ˈbʌt.ə]}}, {{SAMPA|["bVt.@]}}
 **: {{audio|En-uk-butter.ogg|Audio (UK)}}
 ** {{a|US}} {{IPA|[ˈbʌɾ.ɚ]}}, {{SAMPA|["bV4.@`]}}
