--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -198,7 +198,6 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 
 ====Noun====
 {{en-noun}}
-{{WikiSaurus-link|fight}}
 
 # An [[occasion]] of fighting.
 # {{archaic}} A [[battle]] between opposing armies.
@@ -211,6 +210,9 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 # The [[will]] or [[ability]] to fight
 #* ''As soon as he saw the size of his opponent, all the '''fight''' went out of him.''
 #* ''That little guy have a little '''fight''' inside him after all.''
+
+=====Synonyms=====
+* See also [[Wikisaurus:fight]]
 
 =====Derived terms=====
 {{rel-top|Terms derived from the noun ''fight''}}
