--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -73,7 +73,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Italian: {{t+|it|curva|f}}
 * Polish: {{t|pl|zakręt|m}}
 * Russian: [[изгиб]] {{m}}, [[кривая]] {{f}}, [[поворот]] {{m}}
-* [[Scottish Gaelic]]: {{t-|gd|bogha|xs=Scottish Gaelic}}
+* [[Scottish Gaelic]]: {{t-|gd|bogha|xs=Scottish Gaelic}},  {{t|gd|lùb|f}}
 * Spanish: {{t+|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
 * [[Telugu]]: [[వంపు]] (vampu)
@@ -97,7 +97,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: [[曲線]] ([[きょくせん]], kyokusen)
 * Russian: {{t|ru|кривая|f|tr=krivája}}
-* [[Scottish Gaelic]]: {{t-|gd|bogha|f|xs=Scottish Gaelic}}
+* [[Scottish Gaelic]]: {{t-|gd|bogha|f|xs=Scottish Gaelic}},  {{t|gd|lùb|f}}
 * Slovene: [[krivulja]] {{f}}
 * Spanish: {{t+|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
@@ -154,6 +154,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 * Korean: [[구부리다]] (guburida)
 * Russian: [[изгибать]], [[гнуть]]
+* [[Scottish Gaelic]]: {{t|gd|crom}},  {{t|gd|lùb}}
 * Swedish: {{t+|sv|böja}}, {{t+|sv|kröka}}
 * Turkish: {{t|tr|kıvrılmak}}
 {{trans-bottom}}
@@ -172,6 +173,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Japanese: {{Jpan|[[曲がる]]}} ({{Jpan|[[まがる]]}}, magaru)
 * Korean: [[구부러지다]] (gubureojida)
 * Russian: [[изгибаться]], [[гнуться]]
+* [[Scottish Gaelic]]: {{t|gd|lùb}}
 * Swedish: [[böja]] (sig)
 {{trans-bottom}}
 
