--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -190,6 +190,7 @@ From {{etyl|de|da}} {{term|Feld|lang=de}}, from {{etyl|goh|da}} {{term|feld|lang
 [[ko:felt]]
 [[io:felt]]
 [[it:felt]]
+[[kn:felt]]
 [[ku:felt]]
 [[hu:felt]]
 [[ml:felt]]
