--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -10,7 +10,7 @@
 *: {{rhymes|ɛlt}}
 
 ===Etymology 1===
-From {{etyl|ang}} {{term|felt|lang=ang}}; akin to {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, and possibly to  {{attention|grc|I don't believe Greek hair is a thing, much less a term for a thing}} Greek hair or wool wrought into felt, {{etyl|la|-}} {{term|pilus||hair|lang=la}}, {{term|pileus||a felt cap or hat|lang=la}}.
+{{etyl|ang}} {{term|felt|lang=ang}}, from {{proto|Germanic|''feltaz''}} (cf. {{etyl|nl|-}} {{term|vilt|lang=nl}}, {{etyl|de|-}} {{term|Filz|lang=de}}, {{etyl|da|-}} {{term|filt|lang=da}}), from {{proto|Indo-European|''pilto, pilso''}} 'felt' (cf. {{etyl|la|-}} {{term|pilleus|lang=la}} 'felt' (adj.), {{etyl|cu|-}} {{term|plŭstĭ|lang=lu}}, {{etyl|sq|-}} {{term|plis|lang=sq}}, [[Ancient Greek]] ''pílos''), from *''pel-'' 'to beat'. More at [[anvil]].
 
 ====Noun====
 {{wikipedia}}
