--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -35,7 +35,7 @@ From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, 
 * [[Ido]]: [[blonda]]
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
 * Italian: {{t+|it|biondo}}
-* Latin: [[fulvius]], [[flavicomus]]
+* Latin: {{t|la|flavicomus|alt=flāvicomus}}, {{t|la|fulvus}}
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|русокос|m|tr=rúsokos}},  {{t-|mk|плав|m|tr=plav}},  {{t|mk|русокоса|f|tr=rusókosa}},  {{t-|mk|плава|f|tr=pláva}}
 * Norwegian: [[lys(håret)]], blond, [[blondine]]
