--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -42,6 +42,7 @@
 * Japanese: {{t-|ja|コート|tr=kōto}}, {{t|ja|外套|tr=がいとう, gaitō}}
 * [[Luhya]]: {{tø|luy|kumuchosi}}
 * Norwegian: {{t|no|frakk|m}}
+* Polish: [[płaszcz]] {{m}}
 * Portuguese: {{t+|pt|casaco|m}}
 * Russian: {{t+|ru|пальто|n|tr=pal’tó}} {{indeclinable}}, {{t+|ru|пиджак|m|tr=pidžák}} (''jacket'')
 * [[Scottish Gaelic]]: [[còta]] {{m}}
@@ -65,6 +66,7 @@
 * Irish: {{t-|ga|brat|m|xs=Irish}}, {{t-|ga|cóta|m|xs=Irish}}
 * Italian: {{t+|it|rivestimento|m}}
 * Japanese: [[塗装]] ([[とそう]], tosō), [[コーティング]] (kōtyingu)
+* Polish: [[warstwa]] {{f}}
 * Portuguese: {{t+|pt|cobertura|f}}
 * Russian: {{t+|ru|слой|m|tr=sloj}}
 * Spanish: {{t-|es|cubierta|f}}
@@ -77,6 +79,7 @@
 * Finnish: [[turkki]] (fur), [[höyhenpuku]] (feathers)
 * Japanese: [[毛皮]]([[けがわ]], kegawa), [[羽毛]]([[うもう]], umō)
 {{trans-mid}}
+* Polish: [[sierść]] {{f}}
 * Swahili: {{t+|sw|koti|xs=Swahili}}
 * Swedish: [[hårbeklädnad]], [[päls]], [[fjäderdräkt]]
 {{trans-bottom}}
