--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -239,7 +239,7 @@ Old English ''[[pleġa]]'', ''plæġa''; akin to Ancient Greek ''blyein, blýzei
 * Lithuanian: {{t-|lt|žaisti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra}}
 * [[Old English]]: {{t-|ang|lacan|alt=lācan|xs=Old English}}
-* [[Pashto]]: {{ps-Arab|[[لوبې کول]]}}, {{ps-Arab|[[لوبېدل]]}}, {{ps-Arab|[[غږول]]}}
+* [[Pashto]]: {{t-|ps|لوبې كول|tr=lobe kawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: [[bawić]] (się)
 * Portuguese: {{t+|pt|jogar}}
 * Romanian: {{t+|ro|juca}}
@@ -276,6 +276,7 @@ Old English ''[[pleġa]]'', ''plæġa''; akin to Ancient Greek ''blyein, blýzei
 * Italian: {{t+|it|suonare}}
 * [[Macedonian]]: {{t|mk|свири|tr=svíri}}
 * [[Old English]]: {{t-|ang|lacan|alt=lācan|xs=Old English}}
+* [[Pashto]]: {{t-|ps|ږغول|tr=zhaγawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: [[grać]] na
 * Portuguese: {{t+|pt|tocar}}
 * Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
@@ -302,6 +303,7 @@ Old English ''[[pleġa]]'', ''plæġa''; akin to Ancient Greek ''blyein, blýzei
 *: Sorani: {{t|ku|مۆسیقا لێدان|tr=mósíqa lédan|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|свири|tr=svíri}}
 * [[Old English]]: {{t-|ang|lacan|alt=lācan|xs=Old English}}
+* [[Pashto]]: {{t-|ps|ږغول|tr=zhaγawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: {{t+|pl|grać}}
 * Portuguese: {{t+|pt|tocar}}
 * Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
@@ -362,6 +364,7 @@ Old English ''[[pleġa]]'', ''plæġa''; akin to Ancient Greek ''blyein, blýzei
 *: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=ku-Arab}}
 * Lithuanian: {{t-|lt|žaisti|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|игра|tr=ígra}}
+* [[Pashto]]: {{t-|ps|لوبه كول|tr=loba kawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: [[grać]] w
 * Portuguese: {{t+|pt|jogar}}
 * Russian: {{t+|ru|играть|tr=igrát’}} {{impf}}
@@ -388,6 +391,7 @@ Old English ''[[pleġa]]'', ''plæġa''; akin to Ancient Greek ''blyein, blýzei
 * Kurdish:
 *: Sorani: {{t|ku|لێدان|tr=lédan|sc=ku-Arab}}
 * [[Macedonian]]: {{t|mk|пушта|tr=púšta}}
+* [[Pashto]]: {{t-|ps|ږغول|tr=zhaγawəl|sc=ps-Arab|xs=Pashto}}
 * Polish: [[grać]], [[odtwarzać]]
 * Portuguese: {{t+|pt|gravar}}
 * Slovene: [[predvajati]]
