--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -63,7 +63,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Bulgarian: {{t|bg|извивка|f}}
 * [[Catalan]]: revolt, {{m}}
 * Chinese:
-*: Mandarin: {{t|zh|曲線|sc=Hani}},  {{t|zh|曲线|tr=qūxiàn|sc=Hani}}
+*: Mandarin: {{t|zh|曲線|sc=Hani}},  {{t|zh|曲线|tr=qūxiàn|sc=Hani}},  {{t|zh|彎子|sc=Hani}},  {{t|zh|弯子|tr=wānzi|sc=Hani}}
 * Dutch: [[curve]] {{f}}, [[kromming]] {{f}}, [[bocht]] {{m}} (''road'')
 * Esperanto: [[kurbo]], [[kurbiĝo]], [[sinuo]], [[ĝirejo]], [[vojturno]] (''road'')
 * Finnish: {{t-|fi|kaarre}},  {{t+|fi|kurvi}},  {{t+|fi|mutka}}
