--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -40,12 +40,13 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Greek: {{t|el|κουρτίνα|f|sc=Grek}}
 * Hebrew: {{t+|he|וילון|m|tr=vilon}}
 * Icelandic: {{t+|is|gluggatjald|n}}, {{t|is|gardína|f}}
-{{trans-mid}}
 * Italian: {{t+|it|tenda|f}}
+{{trans-mid}}
 * Japanese: {{t+|ja|カーテン|tr=kāten}}
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
 * [[Macedonian]]: {{t-|mk|завеса|f|tr=závesa}},  {{t|mk|перде|n|tr=pérde}}
 * Persian: {{t+|fa|پرده|tr=pardeh|xs=Persian}}
+* Polish: {{t|pl|zasłona|f}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanav'éska}}
 * Serbo-Croatian:
