--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -66,7 +66,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 *: Cyrillic: {{tø|sh|Нови Зеланд|m|alt=Но̏вӣ Зѐланд|sc=Cyrl|xs=Serbo-Croatian}}
 *: Roman: {{tø|sh|Novi Zeland|m|alt=Nȍvī Zèland|xs=Serbo-Croatian}}
 * Slovene: {{t+|sl|Nova Zelandija|f}}
-* Spanish: {{t+|es|Nueva Zelanda|f}}
+* Spanish: {{t+|es|Nueva Zelanda|f}},  {{t|es|Nueva Zelandia|f}}
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
 * Thai: {{t|th|ประเทศนิวซีแลนด์|tr=bpràtêt niw-seelaen}},  {{t|th|นิวซีแลนด์|tr=niw-seelaen}}
