--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -14,6 +14,7 @@ From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[freedom]], [[liberty]]|lang=es}
 # {{context|free software movement}} With very few limitations on distribution or improvement; including [[source code]].
 
 ===See also===
+* [[free as in speech]]
 * [[gratis]]
 
 ----
