--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -18,6 +18,7 @@ Derived from [[масло]] ('butter', 'oil'). Cf. French [[mardi gras]].
 {{ru-noun-inan-ца-1|маслениц|ма́слениц}}
 
 [[Category:Russian nouns]]
+[[Category:Russian words suffixed with -ница]]
 
 [[fr:масленица]]
 [[ru:масленица]]
