--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -29,6 +29,7 @@
 * Bulgarian: {{t|bg|пълзене}}
 * Dutch: {{t-|nl|kruip|m}}
 * Finnish: {{t-|fi|ryömintä}}, {{t+|fi|matelu}}
+* French: {{t|fr|ramper}}
 {{trans-mid}}
 * Italian: {{t+|it|strisciare|m}}
 * Persian: {{t|fa|خزیدن|xs=Persian}}
