--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,6 +1,6 @@
 ==English==
 {{wikipedia|United States|United States of America}}
-
+{{rfv}}
 ===Proper noun===
 '''the [[united|United]] [[states|States]] [[of]] [[America]]'''
 
@@ -110,6 +110,7 @@
 * [[Appendix:Countries of the world]]
 * [[Appendix:Place names in the United States of America]]
 
+[[Category:English proper nouns]]
 [[Category:Countries]]
 
 [[ar:United States of America]]
