--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -4,7 +4,7 @@
 * [[blonde]] (US)
 
 ===Etymology===
-From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} ''blont'', of {{etyl|gem}} origin from {{etyl|frk}} ''*blund'' "a mixed color between golden and light-brown"; compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax|''grey''-haired|lang=ang}}. See {{term|blend}}
+From {{etyl|frm}} {{term|blond|lang=fr}} {{m}} / {{term|blonde|lang=fr}} {{f}}, from {{etyl|fro}} {{term|blond|blond, blont|lang=fro}}, of {{etyl|gem}} origin, from {{etyl|frk}} *{{term||blund|lang=frk}} "a mixed color between golden and light-brown" from {{proto|Germanic|blund-|mixed, blinding|lang=en}} from {{proto|Indo-European|bhlendh-|to become turbid, see badly, go blind|lang=en}}. Compare {{etyl|ang|-}} {{term|blondenfeax|''blonden''feax||lang=ang}} "grey-haired", {{etyl|ang|-}} {{term|blandan|lang=ang}} "to mix". More at {{l|en|blend}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/}}
