--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -98,7 +98,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * [[Kannada]]: {{t+|kn|ಬೀರು|tr=bīru|sc=Knda|xs=Kannada}}
 * Polish: {{t+|pl|kosztować}}
 * Portuguese: {{t+|pt|custar}}
-* Romanian: {{t|ro|costa}}
+* Romanian: {{t|ro|costa}},  {{t|ro|preţui}}
 * Russian: {{t+|ru|стоить|tr=stóit'}}
 * [[Scottish Gaelic]]: {{t-|gd|cosg|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|costar}}
