--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -40,6 +40,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coûter]]'').
 * [[Novial]]: [[kosto]]
 * Polish: {{t+|pl|koszt|m}}
 * Portuguese: {{t+|pt|custo|m}}
+* Romanian: {{t|ro|cost}}
 * Russian: {{t+|ru|стоимость|f|tr=stóimost'}}, {{t|ru|себестоимость|f|tr=sebestóimost'}}, {{t+|ru|цена|f|tr=tsená}}, {{t|ru|затраты|f|p|tr=zatráty}}, {{t|ru|расходы|m|p|tr=rasxódy}}
 * [[Scottish Gaelic]]: {{t-|gd|cosgais|f|xs=Scottish Gaelic}},  {{t-|gd|prìs|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|costo|m}}
