--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -217,9 +217,11 @@ From {{etyl|fro}} {{term|porter|lang=fr}} < {{etyl|la}} {{term|portare||carry|la
 {{en-noun}}
 
 # Something used to carry a thing, especially a frame for [[wick]]s in candle-making.
-# {{dated}} The manner in which a person carries himself; [[bearing]]; [[deportment]]; [[carriage]]. See also {{term|portance}}.
-#: ''And of his '''port''' as meeke as is a mayde.'' — [[w:Geoffrey Chaucer|Chaucer]], ''[[w:The Canterbury Tales|Canterbury Tales]]'', [[s:The_Canterbury_Tales/General_Prologue|line 69]]
-#: ''..the necessities of pomp, grandeur, and a suitable '''port''' in the world.'' — [[w:Robert South|Robert South]]
+# {{archaic}} The manner in which a person carries himself; [[bearing]]; [[deportment]]; [[carriage]]. See also {{term|portance}}.
+#*'''late 14th c.''', [[w:Geoffrey Chaucer|Chaucer]], ''[[w:The Canterbury Tales|Canterbury Tales]]'', [[s:The_Canterbury_Tales/General_Prologue|line 69]]:
+#*:And of his '''port''' as meeke as is a mayde.
+#*'''1590''', Edmund Spenser, ''The Faerie Queene'', II.iii:
+#*:Those same with stately grace, and princely '''port''' / She taught to tread, when she her selfe would grace [...].
 # {{military}} The position of a weapon when ported; a rifle position executed by throwing the weapon diagonally across the front of the body, with the right hand grasping the small of the stock and the barrel sloping upward and crossing the point of the left shoulder.
 # {{computing}} A [[program]] that has been [[adapt]]ed, [[modify|modified]], or [[recode]]d so that it works on a different [[platform]] from the one for which it was created; the act of this adapting.
 #: ''Gamers can't wait until a '''port''' of the title is released on the new system.''
