--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -4,7 +4,7 @@
 ===Etymology===
 From {{etyl|sh|en}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the [[Slav]]s).  Literally, ''the land of the south Slavs''.
 
-===Alternative spellings===
+===Alternative forms===
 * [[Jugoslavia]] (''common pre-WWII spelling'')
 
 ===Pronunciation===
