--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -16,7 +16,7 @@
 
 # A place on the [[coast]] at which ships can shelter, or dock to load and unload cargo or passengers.
 # A town or city containing such a place.
-# {{nautical|uncountable}} The left-hand side of a [[vessel]], including aircraft, when one is facing the front.
+# {{nautical|uncountable}} The left-hand side of a [[vessel]], including aircraft, when one is facing the front. Port does not change based on the orientation of the person aboard the craft.
 
 =====Synonyms=====
 * {{sense|place where ships dock}} [[harbour]], [[haven]]
