--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -473,6 +473,9 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * {{alphagram|ctu}}
 * [[UTC#English|UTC]]
 
+===References===
+<references/>
+
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:English irregular verbs]]
