--- a/en/健/健.11125.wikitext
+++ b/en/健/健.11125.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Etymology===
-{{Han compound|人|建|t1=person|t2=erect|ls=ic}}
+{{Han compound|人|alt1=亻|建|t1=person|t2=erect|ls=ic}}
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2524<sub>0</sub>|canj=人弓大手 (ONKQ)}}
