--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -55,7 +55,7 @@
 *: Roman: [[kornjača#Serbian|kornjača]] {{f}}
 * Slovene: [[kopenska želva]] {{f}}
 * Somali: {{t-|so|diin|xs=Somali}}
-* Spanish: {{t|es|tortuga|es}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
+* Spanish: {{t|es|tortuga|f}}, {{t|es|tortuga terrestre|f}}, {{t|es|morrocoy|m}} {{qualifier|Venezuela}}
 * Swahili: {{t+|sw|kobe|xs=Swahili}}
 * Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
 * [[Telugu]]: [[తాబేలు]] (taabealu)
