--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -19,6 +19,8 @@ From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lan
 #: ''The rope '''bridge''' crosses the river.''
 # {{anatomy}} The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
 #: ''Rugby players often break the '''bridge''' of their noses.''
+# {{medicine}} A preparative procedure
+#: ''ECMO is used as a bridge to surgery to stabilize the patient''
 # {{dentistry}} A [[prosthesis]] replacing one or several adjacent [[tooth|teeth]].
 #: ''The dentist  pulled out the decayed tooth and put in a '''bridge'''.''
 # {{nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
