--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -170,7 +170,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Lithuanian: {{t+|lt|slyva|xs=Lithuanian}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
 * [[Middle High German]]: [[pflūme]], [[pfrūme]]
-* Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
+* [[Old English]]: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * [[Old High German]]: [[pfrūma]]
 * [[Papiamentu]]: {{tø|pap|preimu}}
 * Persian: {{t|fa||tr=ālū|xs=Persian}}
@@ -218,7 +218,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Latin: {{t-|la|prunus|f|alt=prūnus}}
 * Latvian: [[plūme]] {{f}}
 * [[Macedonian]]: {{t-|mk|слива|f|tr=slíva}}
-* Old English: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
+* [[Old English]]: {{t-|ang|plume|f|alt=plūme|xs=Old English}}
 * [[Papiamentu]]: {{tø|pap|preimu}}
 * Polish: {{t+|pl|śliwa|f}}
 * Portuguese: {{t+|pt|ameixeira|f}}, {{t+|pt|ameixa|f}}
