--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -79,14 +79,12 @@ Borrowed from {{etyl|la|fr}} {{term|mandatum}}, from {{term|mandare||to put in o
 ==Swedish==
 
 ===Noun===
-'''mandat'''
+{{sv-noun|g=n}}
 
 # [[mandate]]
 
-====Inflection====
-{{sv-decl-noun|gender=Neuter|mandat|mandatet|mandat|mandaten|mandats|mandatets|mandats|mandatens}}
-
-[[Category:Swedish nouns]]
+====Declension====
+{{sv-noun-n-zero}}
 
 [[cs:mandat]]
 [[de:mandat]]
