--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -313,6 +313,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 {{trans-bottom}}
 
 {{trans-top|choice}}
+* Spanish: {{t|es|elección}}
 * Swahili: {{t|sw|zambarau|xs=Swahili}}
 {{trans-mid}}
 * Vietnamese: {{t+|vi|chọn lọc|xs=Vietnamese}}
