--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -4,7 +4,7 @@
 ===Etymology===
 Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old High German]] "''fleisk''" (German "{{term|Fleisch|lang=de}}").
 
-===Pronunciation===
+===Pronounciation===
 * {{audio|en-us-flesh.ogg|Audio (US)}}
 *: {{rhymes|ɛʃ}}
 
