--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -250,6 +250,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Czech: {{t-|cs|boj|m}}
 * Danish: {{t-|da|kamp}}
 * Dutch: {{t+|nl|gevecht|n}}
+* Finnish: {{t|fi|taistelu}}, {{t|fi|tappelu}}
 * French: {{t+|fr|lutte|f}}, {{t+|fr|combat|m}}
 * German: {{t+|de|Kampf|m}}
 * Hebrew: {{t-|he|קרב|m|tr=kráv}}, {{t-|he|לחימה|f|tr=lekhimá}}, {{t-|he|ריב|m|tr=rív}}, {{t+|he|מאבק|m|tr=ma`avák}}
@@ -298,6 +299,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 {{trans-top|physical confrontation}}
 * Danish: {{t-|da|slagsmål}}, {{t-|da|ballade}}
 * Dutch: [[gevecht]] {{n}}, [[boel]] {{m}} (''colloquial, Flemish'')
+* Finnish: {{t|fi|tappelu}}, {{t|fi|taistelu}}
 * French: {{t+|fr|bagarre|f}}
 * German: [[Keilerei]] {{f}}
 * Hebrew: {{t-|he|ריב|m|tr=rív}}, {{t+|he|מאבק|m|tr=ma`avák}}
@@ -349,6 +351,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 {{trans-top|will or ability to fight}}
 * Czech: [[bojovnost]] {{f}}
 * Dutch: [[vechtlust]] {{m}}
+* Finnish: {{t|fi|taistelutahto}}
 * Hebrew: {{t-|he|רוח קרב|f|tr=rú`akh kráv}}
 * Japanese: [[ファイト]] (faito), [[闘志]] (tōshi), [[戦意]] (sen'i)
 {{trans-mid}}
