--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -26,6 +26,8 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 
 ====Translations====
 {{trans-top|matter}}
+* Chinese:
+*: Mandarin: {{t|zh|物質|sc=Hani}}, {{t|zh|物质|tr=wùzhì|sc=Hani}}
 * Czech: {{t+|cs|látka|f}}
 * Danish: {{t-|da|substans}}, {{t+|da|masse}}
 * Dutch: {{t+|nl|substantie|f}}
@@ -51,6 +53,8 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 {{trans-bottom}}
 
 {{trans-top|essential part}}
+* Chinese:
+*: Mandarin: {{t|zh|實質|sc=Hani}}, {{t|zh|实质|tr=shízhì|sc=Hani}}
 * Danish: [[substans]], [[hovedindhold]]
 * Finnish: {{t+|fi|ydin}}, {{t+|fi|substanssi}}
 * French: {{t+|fr|substance|f}}
@@ -82,6 +86,8 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 {{trans-bottom}}
 
 {{trans-top|considerable wealth}}
+* Chinese:
+*: {{trreq|Mandarin}}
 * Danish: {{t-|da|formue}}
 * Finnish: {{t+|fi|vara|alt=varat}}
 * German: {{t+|de|Substanz|f}}
@@ -96,6 +102,8 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 {{trans-bottom}}
 
 {{trans-top|drugs}}
+* Chinese:
+*: {{trreq|Mandarin}}
 * Finnish: {{t+|fi|aine|alt=aineet}}
 * German: {{t+|de|Substanz|f}}
 * Greek: [[ουσίες]] (usíes) {{f|p}}
@@ -111,7 +119,6 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * {{ttbc|Arabic}}: {{Arab|[[مادة]]}} (mádda) {{f}}
 * {{ttbc|Azeri}}: [[maddə]]
 * {{ttbc|Bulgarian}}: [[вещество]] (vešestvo) {{n}}
-* {{ttbc|Chinese}}: [[物質]], [[物质]] (wùzhí)
 * {{ttbc|Dutch}}: [[substantie]]
 * {{ttbc|Esperanto}}: [[substanco]]
 * {{ttbc|Estonian}}: [[aine]]
