--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -77,7 +77,7 @@ From {{etyl|la}} ''[[vomitare]]'', present active infinitive of {{term|vomito|vo
 * Finnish: {{t+|fi|oksennus}}
 * French: {{t+|fr|vomi|m}}
 * [[Galician]]: {{t-|gl|vómito|m|xs=Galician}}
-* German: {{t|de|Kotze|f}}
+* German: {{t|de|Kotze|f}}, {{t|de|Erbrochenes}}
 * Greek: {{t+|el|έμεσμα|n|tr=émesma}}
 * Hebrew: {{t|he|קא|tr=kei}}
 * Hungarian: {{t+|hu|hányás}},  {{t-|hu|hányadék}}
