--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -65,7 +65,7 @@
 * [[Catalan]]: [[bell]], [[formós]],  {{t+|ca|bonic|m}},  {{t|ca|bonica|f}}
 * [[Chamicuro]]: {{tø|ccc|pya'c̈homa}}, {{tø|ccc|pewa puti'na}}
 * Chinese:
-*: Mandarin: {{t-|cmn|漂亮|tr=piàoliàng|sc=Hani}},  {{t-|cmn|美|tr=měi|sc=Hani}},  {{t-|cmn|好看|tr=hǎokàn|sc=Hani}}
+*: Mandarin: {{t-|cmn|漂亮|tr=piàoliang|sc=Hani}},  {{t-|cmn|美|tr=měi|sc=Hani}},  {{t-|cmn|好看|tr=hǎokàn|sc=Hani}}
 * Czech: {{t-|cs|krásný}}
 * Danish: {{t+|da|smuk}}
 * Dutch: {{t+|nl|mooi}}
