--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -10,7 +10,7 @@
 [[Image:Adriaen Brouwer 001.jpg|thumb|Fight ([[brawl]])]]
 
 ===Etymology 1===
-From {{etyl|ang}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
+From {{etyl|ang}} ''[[feohtan]]'', from {{proto|Germanic|fehtanan|lang=en}}. Cognate with Dutch ''[[vechten]]'', German ''[[fechten]]''.
 
 ====Verb====
 {{en-verb|fights|fighting|fought|'''[[fought]]''' ''or'' '''[[foughten]]'''}}
