--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -90,7 +90,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|bello}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}},  {{t-|ja|綺麗}},  {{t-|ja|きれい|tr=kirei}},  {{t+|ja|素敵|tr=すてき, suteki}}
-* [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt)
+* [[Khmer]]: {{Khmr|[[ស្អាត]]}} (saāt), {{t|km|ល្អ|tr=l'ɑɑ|sc=Khmr}}
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Latin: {{t-|la|pulcher}}, {{t-|la|formosus|m}}, {{t+|la|bellus|m}}
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
