--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|ang}} ''[[pullian]]''
+From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to pull, tug, pluck|lang=ang}}. Related to {{etyl|nds|-}} {{term|pulen||to pick, pluck, pull, tear|lang=nds}}, {{etyl|dum|-}} {{term|pullen||to drink|lang=dum}}, {{etyl|non|-}} {{term|púla|pūla|to beat|lang=non}}.
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/}}, {{SAMPA|/pUl/}}
