--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -71,7 +71,7 @@
 * Czech: {{t-|cs|Evropan|m}}
 * Danish: {{t-|da|europæer|c}}
 * Dutch: {{t+|nl|Europeaan}}
-* Esperanto: [[Eŭropano]]
+* Esperanto: {{t|eo|eŭropano}}
 * Estonian: {{t+|et|eurooplane}}
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|Européen|m}}, {{t+|fr|Européenne|f}}
