--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -1,5 +1,6 @@
 ==English==
 {{wikipedia}}
+[[Image:Germany_(orthographic_projection).svg|150px|thumb|right|Germany]]
 
 ===Etymology===
 From {{etyl|la}} {{term|Germania|lang=la}}, likely of Gallic origin
